# fodder

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  elm.json
examples/: example.rs
examples/worker/: Cargo.toml  elm.json  main.rs
examples/worker/elm-src/: Main.elm
fodder-macro/: Cargo.toml
fodder-macro/src/: lib.rs
fodder-macro/src/kernel/: basics.rs
fodder-utils/: Cargo.toml
fodder-utils/src/: err.rs  lib.rs  macros.rs
fodder-utils/src/ast/: infix.rs  location.rs  mod.rs  name.rs  parse.rs  parser.rs  source.rs  token.rs  tuple.rs
fodder-utils/src/ast/old/: mod.rs  span.rs  tuple.rs
fodder-utils/src/ast/old/frontend/: binding.rs  exposing.rs  expr.rs  import.rs  name.rs  pattern.rs
fodder-utils/src/ast/old2/: module.rs  parse.rs
fodder-utils/src/ast/old2/old/: case.rs
fodder-utils/src/ast/old2/old/frontend/: declaration.rs  mod.rs  module.rs  type_annotation.rs
fodder-utils/src/compiler/: main.rs
fodder-utils/src/error/: mod.rs  syntax.rs
fodder-utils/src/parse/: expr.rs  mod.rs  module.rs  primitives.rs
fodder-utils/src/parse/async/: mod.rs  primitives.rs  space.rs  variable.rs
fodder-utils/src/project/: constraint.rs  elm_json.rs  finder.rs  from_reader.rs  kind.rs  license.rs  mod.rs  module_id.rs  repo.rs  version.rs
src/: lib.rs
src/runtime/kernel/: basics.rs
