[package]
name = "fodder-utils"
version = "0.1.0"
authors = ["dullbananas"]
edition = "2018"

[dependencies]
dirs-next = { version = "2.0" }
hex = { version = "0.4", features = ["serde"] }
nom = { version = "6.1" }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0" }
reqwest = { version = "0.11", features = ["gzip", "json", "tokio-native-tls", "tokio-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
sha-1 = { version = "0.9" }
spdx = { veresion = "0.3" }
syn = { version = "1.0", features = ["full"] }
tokio = { version = "1.0", features = ["fs", "io-util", "sync"] }
zip-extract = { version = "0.1", default-features = false, features = [] }
